--- a/.env.template
+++ b/.env.template
@@ -6,5 +6,5 @@ MYSQL_PASSWORD=wordpress
 
 # wordpress settings
 WORDPRESS_DB_HOST=db:3306
-WORDPRESS_DB_USER=wordpress
-WORDPRESS_DB_PASSWORD=wordpress
+WORDPRESS_DB_USER=${MYSQL_USER}
+WORDPRESS_DB_PASSWORD=${MYSQL_PASSWORD}
