feat: アップロード上限に引っかかるため、PHPのアップロードファイルサイズ上限とポストサイズ上限をそれぞれ30M,20Mに変更
設定追加のためwordpress用のdockerfileを追加しビルドを実行するように修正

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,7 +36,7 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
 
   wordpress:
-    image: wordpress:5.9-fpm
+    build: ./wordpress
     container_name: wp-wordpress
     env_file:
       - .env
