feat: nginxのアップロードbodyサイズ上限を30Mに変更

--- a/nginx/wp.conf
+++ b/nginx/wp.conf
@@ -1,5 +1,7 @@
 server {
     listen 8001;
+
+    client_max_body_size 30M;
  
     access_log /var/log/nginx/web/wp.access.log;
     error_log  /var/log/nginx/web/wp.error.log;
