change log dir path

--- a/nginx/wp.conf
+++ b/nginx/wp.conf
@@ -3,8 +3,8 @@ server {
 
     client_max_body_size 30M;
  
-    access_log /var/log/nginx/web/wp.access.log;
-    error_log  /var/log/nginx/web/wp.error.log;
+    access_log /var/log/nginx/wordpress/wp.access.log;
+    error_log  /var/log/nginx/wordpress/wp.error.log;
     
     root /var/www/html;     
 
