--- a/nginx/wp.conf
+++ b/nginx/wp.conf
@@ -1,3 +1,8 @@
+map $http_accept $webp_suffix {
+    default "";
+    "~*image/webp" ".webp";
+}
+
 server {
     listen 8001;
 
@@ -6,7 +11,12 @@ server {
     access_log /var/log/nginx/wordpress/wp.access.log;
     error_log  /var/log/nginx/wordpress/wp.error.log;
     
-    root /var/www/html;     
+    root /var/www/html;
+
+    location ~* ^.+\.(jpe?g|png|gif)$ {
+        add_header Vary Accept;
+        try_files $uri$webp_suffix $uri =404;
+    }
 
     location / {                                              
         try_files $uri $uri/index.php?$args;                                    
