permalink change support

--- a/nginx/wp.conf
+++ b/nginx/wp.conf
@@ -18,8 +18,9 @@ server {
         try_files $uri$webp_suffix $uri =404;
     }
 
-    location / {                                              
-        try_files $uri $uri/index.php?$args;                                    
+    location / {        
+        index index.php;                 
+        try_files $uri $uri/ /index.php?q=$uri&$args;                                    
     } 
     
     location ~ \.php$ {
